[package]
name = "libemin"
version = "1.0.0"
edition = "2024"
description = "Native desktop helper for booking hours into Libemax"

[package.metadata.packager]
product-name = "Libemin"
identifier = "io.github.mattiabonanni.libemin"
publisher = "Mattia Bonanni"
description = "Native desktop helper for booking hours into Libemax"
category = "Productivity"
out-dir = "dist"
binaries-dir = "target/release"
before-packaging-command = "cargo build --release"
icons = ["assets/icon.png", "assets/icon.ico"]

[package.metadata.packager.windows]
allow-downgrades = false

[package.metadata.packager.macos]
minimum-system-version = "12.0"

[package.metadata.packager.nsis]
installer-mode = "currentUser"
installer-icon = "assets/icon.ico"
appdata-paths = ["$APPDATA/libemin/libemin"]

[package.metadata.packager.wix]
languages = ["en-US"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
cookie_store = "0.22"
directories = "5.0"
eframe = { version = "0.29", default-features = true }
egui_extras = { version = "0.29.1", features = ["datepicker"] }
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "cookies", "json", "rustls-tls"] }
reqwest_cookie_store = "0.9"
scraper = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
